--- a/skins/Bootstrap/lang/de.conf
+++ b/skins/Bootstrap/lang/de.conf
@@ -18,14 +18,14 @@ locale = de_AT    # German Austria
 
 [Units]
 
-    #[[Groups]]
+    [[Groups]]
         # group_altitude     = meter                # Options are 'foot' or 'meter'
         # group_degree_day   = degree_C_day         # Options are 'degree_F_day' or 'degree_C_day'
         # group_distance     = km                   # Options are 'mile' or 'km'
         # group_pressure     = mBar                 # Options are 'inHg', 'mmHg', 'mbar', or 'hPa'
         # group_rain         = mm                   # Options are 'inch', 'cm', or 'mm'
         # group_rainrate     = mm_per_hour          # Options are 'inch_per_hour', 'cm_per_hour', or 'mm_per_hour'
-        # group_speed        = km_per_hour            # Options are 'mile_per_hour', 'km_per_hour', 'knot', or 'meter_per_second'
+        group_speed        = km_per_hour            # Options are 'mile_per_hour', 'km_per_hour', 'knot', or 'meter_per_second'
         # group_speed2       = meter_per_second2    # Options are 'mile_per_hour2', 'km_per_hour2', 'knot2', or 'meter_per_second2'
         # group_temperature  = degree_C             # Options are 'degree_F' or 'degree_C'
 
@@ -91,7 +91,7 @@ locale = de_AT    # German Austria
         outTemp                = Temperatur
         pressure               = abs. Luftdruck    # QFE
         pressureRate           = Luftdruckänderungsrate
-        radiation              = Globalstrahlung
+        radiation              = PV Output
         rain                   = Niederschlag
         rainRate               = Niederschlagsintensität
         soilMoist1             = Bodenfeuchtigkeit1
@@ -122,7 +122,7 @@ locale = de_AT    # German Austria
         rainBatteryStatus      = Spannung Regenmesser
         referenceVoltage       = Referenzspannung
         rxCheckPercent         = Signalqualität
-        supplyVoltage          = Versorgungsspannung
+        supplyVoltage          = Aux. Battery Voltage
         txBatteryStatus        = Spannung Sender
         windBatteryStatus      = Spannung Anemometer
         batteryStatus1         = Spannung Batterie1
@@ -149,7 +149,7 @@ locale = de_AT    # German Austria
 
 [Texts]
     "Current Conditions" = "Aktuelle Wetterwerte"
-    "Footer Text" = "Fußzeilentext"
+    "Footer Text" = ""
     "Live" = "Live!"
     "24 Hours" = "24 Stunden"
     "Week" = "Woche"
@@ -239,12 +239,12 @@ locale = de_AT    # German Austria
 
     [[windSpeed]]
         minvalue = 0
-        maxvalue = 30
-        splitnumber = 6
-        lineColorUntil = 20.83333, maxvalue          # 20,83333 is 8 Bft
+        maxvalue = 100
+        splitnumber = 5
+        lineColorUntil = 75, maxvalue          # 20,83333 is 8 Bft
 
     [[windGust]]
         minvalue = 0
-        maxvalue = 50
-        splitnumber = 10
-        lineColorUntil = 20.83333, maxvalue          # 20,83333 is 8 Bft
+        maxvalue = 160
+        splitnumber = 8
+        lineColorUntil = 75, maxvalue          # 20,83333 is 8 Bft
