--- a/skins/Bootstrap/skin.conf
+++ b/skins/Bootstrap/skin.conf
@@ -569,7 +569,7 @@
 
         [[[daytempchill-Bootstrap]]]
             [[[[outTemp]]]]
-            [[[[windchill]]]]
+            [[[[dewpoint]]]]
 
         [[[daybarometer-Bootstrap]]]
             [[[[barometer]]]]
@@ -617,7 +617,7 @@
 
         [[[week-tempchill-Bootstrap]]]
             [[[[outTemp]]]]
-            [[[[windchill]]]]
+            [[[[dewpoint]]]]
 
         [[[week-barometer-Bootstrap]]]
             [[[[barometer]]]]
@@ -669,7 +669,7 @@
 
         [[[monthtempchill-Bootstrap]]]
             [[[[outTemp]]]]
-            [[[[windchill]]]]
+            [[[[dewpoint]]]]
 
         [[[monthbarometer-Bootstrap]]]
             [[[[barometer]]]]
