--- a/skins/Bootstrap/skin.conf
+++ b/skins/Bootstrap/skin.conf
@@ -637,6 +637,7 @@
         [[[week-wind-Bootstrap]]]
             [[[[windSpeed]]]]
             [[[[windGust]]]]
+                aggregate_type = max
 
         [[[week-winddir-Bootstrap]]]
             # Hardwire in the y-axis scale for wind direction:
@@ -689,6 +690,7 @@
         [[[monthwind-Bootstrap]]]
             [[[[windSpeed]]]]
             [[[[windGust]]]]
+                aggregate_type = max
 
         [[[monthwinddir-Bootstrap]]]
             # Hardwire in the y-axis scale for wind direction:
@@ -757,6 +759,7 @@
         [[[yearwind-Bootstrap]]]
             [[[[windSpeed]]]]
             [[[[windGust]]]]
+                aggregate_type = max
 
         [[[yearwinddir-Bootstrap]]]
             # Hardwire in the y-axis scale for wind direction:
