year supply voltage config

--- a/skins/Bootstrap/skin.conf
+++ b/skins/Bootstrap/skin.conf
@@ -791,7 +791,15 @@
                 label = PV Output (max.)
 
         [[[yearsupplyVoltage-Bootstrap]]]
-            [[[[supplyVoltage]]]]
+            [[[[min_supplyVoltage]]]]
+                line_type = 'none'
+                marker_type ='cross'
+                marker_size = 3
+                data_type = supplyVoltage
+                aggregate_type = min
+                aggregate_interval = 86400
+                label = Supply Voltage (min.)
+            [[[[max_supplyVoltage]]]]
                 line_type = 'none'
                 marker_type ='cross'
                 marker_size = 3
