--- a/skins/Bootstrap/skin.conf
+++ b/skins/Bootstrap/skin.conf
@@ -914,7 +914,7 @@
     [[outTemp]] # choose freely
         #animation = False # default true
         [[[outTemp]]] #choose weewx field name
-            payload_key = outTemp_C
+            payload_key = outTemp_F
             showMaxMarkPoint = true
             showMinMarkPoint = true
             showAvgMarkLine = true
@@ -930,7 +930,7 @@
 
     [[barometer]]
         [[[barometer]]]
-            payload_key = barometer_mbar
+            payload_key = barometer_inHg
             showMaxMarkPoint = true
             showMinMarkPoint = true
             showAvgMarkLine = false
@@ -940,7 +940,7 @@
     [[rain]]
         aggregate_interval_minutes = 30
         [[[rain]]]
-            payload_key = rain_mm
+            payload_key = rain_in
             showMaxMarkPoint = false
             showMinMarkPoint = false
             showAvgMarkLine = false
@@ -958,14 +958,14 @@
 
     [[wind]]
         [[[windSpeed]]]
-            payload_key = windSpeed_mps
+            payload_key = windSpeed_mph
             showMaxMarkPoint = false
             showMinMarkPoint = false
             showAvgMarkLine = false
             lineColor = '#428bca'
             decimals = 0
         [[[windGust]]]
-            payload_key = windGust_mps
+            payload_key = windGust_mph
             showMaxMarkPoint = true
             showMinMarkPoint = false
             showAvgMarkLine = false
