--- a/skins/Bootstrap/skin.conf
+++ b/skins/Bootstrap/skin.conf
@@ -855,7 +855,7 @@
     # payload keys below will fit. Since you can use an mix multiple sources, adapt to your needs
 
     [[outTemp]] #choose weewx field name
-        payload_key = outTemp_F                # outTemp_C if target_unit 'METRICWX', or 'METRIC'
+        payload_key = outTemp_C                # outTemp_C if target_unit 'METRICWX', or 'METRIC'
         minvalue = 0
         maxvalue = 100
         splitnumber = 10                       # choose a splitnumber fittig minvalue and maxvalaue: e.g.: 0/100: 10, for -20/40: 6
@@ -866,7 +866,7 @@
         #animation = False                     # default true
 
     [[barometer]]
-        payload_key = barometer_inHg           # barometer_mbar if target_unit 'METRICWX', or 'METRIC'
+        payload_key = barometer_mbar           # barometer_mbar if target_unit 'METRICWX', or 'METRIC'
         minvalue = 28
         maxvalue = 32
         splitnumber = 4
@@ -881,7 +881,7 @@
         decimals = 0
 
     [[outHumidity]]
-        payload_key = outHumidity
+        payload_key = disabled_outHumidity
         minvalue = 0
         maxvalue = 100
         splitnumber = 5
@@ -890,7 +890,7 @@
         decimals = 0
 
     [[windSpeed]]
-        payload_key = windSpeed_mph           # windSpeed_mps if target_unit 'METRICWX', windSpeed_kph if 'METRIC'
+        payload_key = windSpeed_kph           # windSpeed_mps if target_unit 'METRICWX', windSpeed_kph if 'METRIC'
         minvalue = 0
         maxvalue = 60
         splitnumber = 6
@@ -899,7 +899,7 @@
         decimals = 0
 
     [[windGust]]
-        payload_key = windGust_mph            # windSpeed_mps if target_unit 'METRICWX', windSpeed_kph if 'METRIC'
+        payload_key = windGust_kph            # windSpeed_mps if target_unit 'METRICWX', windSpeed_kph if 'METRIC'
         minvalue = 0
         maxvalue = 100
         splitnumber = 10
@@ -914,14 +914,14 @@
     [[outTemp]] # choose freely
         #animation = False # default true
         [[[outTemp]]] #choose weewx field name
-            payload_key = outTemp_F
+            payload_key = outTemp_C
             showMaxMarkPoint = true
             showMinMarkPoint = true
             showAvgMarkLine = true
             lineColor = '#428bca'
             decimals = 1
         [[[dewpoint]]]
-            payload_key = dewpoint_F
+            payload_key = disabled_dewpoint_C
             showMaxMarkPoint = false
             showMinMarkPoint = false
             showAvgMarkLine = false
@@ -930,7 +930,7 @@
 
     [[barometer]]
         [[[barometer]]]
-            payload_key = barometer_inHg
+            payload_key = barometer_mbar
             showMaxMarkPoint = true
             showMinMarkPoint = true
             showAvgMarkLine = false
@@ -940,7 +940,7 @@
     [[rain]]
         aggregate_interval_minutes = 30
         [[[rain]]]
-            payload_key = rain_in
+            payload_key = rain_mm
             showMaxMarkPoint = false
             showMinMarkPoint = false
             showAvgMarkLine = false
@@ -949,7 +949,7 @@
 
     [[outHumidity]]
         [[[outHumidity]]]
-            payload_key = outHumidity
+            payload_key = disabled_outHumidity
             showMaxMarkPoint = true
             showMinMarkPoint = true
             showAvgMarkLine = false
@@ -958,14 +958,14 @@
 
     [[wind]]
         [[[windSpeed]]]
-            payload_key = windSpeed_mph
+            payload_key = windSpeed_kph
             showMaxMarkPoint = false
             showMinMarkPoint = false
             showAvgMarkLine = false
             lineColor = '#428bca'
             decimals = 0
         [[[windGust]]]
-            payload_key = windGust_mph
+            payload_key = windGust_kph
             showMaxMarkPoint = true
             showMinMarkPoint = false
             showAvgMarkLine = false
