Fix payload values

--- a/skins/Bootstrap/skin.conf
+++ b/skins/Bootstrap/skin.conf
@@ -890,7 +890,7 @@
         decimals = 0
 
     [[windSpeed]]
-        payload_key = windSpeed_kph           # windSpeed_mps if target_unit 'METRICWX', windSpeed_kph if 'METRIC'
+        payload_key = windSpeed_mps           # windSpeed_mps if target_unit 'METRICWX', windSpeed_kph if 'METRIC'
         minvalue = 0
         maxvalue = 60
         splitnumber = 6
@@ -899,7 +899,7 @@
         decimals = 0
 
     [[windGust]]
-        payload_key = windGust_kph            # windSpeed_mps if target_unit 'METRICWX', windSpeed_kph if 'METRIC'
+        payload_key = windGust_mps            # windGust_mps if target_unit 'METRICWX', windGust_kph if 'METRIC'
         minvalue = 0
         maxvalue = 100
         splitnumber = 10
@@ -958,14 +958,14 @@
 
     [[wind]]
         [[[windSpeed]]]
-            payload_key = windSpeed_kph
+            payload_key = windSpeed_mps
             showMaxMarkPoint = false
             showMinMarkPoint = false
             showAvgMarkLine = false
             lineColor = '#428bca'
             decimals = 0
         [[[windGust]]]
-            payload_key = windGust_kph
+            payload_key = windGust_mps
             showMaxMarkPoint = true
             showMinMarkPoint = false
             showAvgMarkLine = false
