--- a/skins/Bootstrap/skin.conf
+++ b/skins/Bootstrap/skin.conf
@@ -581,7 +581,7 @@
             [[[[rain]]]]
                 aggregate_type = sum
                 aggregate_interval = 3600
-#                label = Rain (hourly total)
+                label = Niederschlag (Summe 1h)
 
         [[[dayhumidity-Bootstrap]]]
             [[[[outHumidity]]]]
@@ -629,7 +629,7 @@
             [[[[rain]]]]
                 aggregate_type = sum
                 aggregate_interval = 3600
-#                label = Rain (hourly total)
+                label = Niederschlag (Summe 1h)
 
         [[[week-humidity-Bootstrap]]]
             [[[[outHumidity]]]]
@@ -681,8 +681,8 @@
             plot_type = bar
             [[[[rain]]]]
                 aggregate_type = sum
-                aggregate_interval = 3600
-#                label = Rain (hourly total)
+                aggregate_interval = 86400
+                label = Niederschlag (Summe 24h)
 
         [[[monthhumidity-Bootstrap]]]
             [[[[outHumidity]]]]
@@ -750,8 +750,8 @@
             plot_type = bar
             [[[[rain]]]]
                 aggregate_type = sum
-                aggregate_interval = 3600
-#                label = Rain (hourly total)
+                aggregate_interval = 86400
+                label = Niederschlag (Summe 24h)
 
         [[[yearhumidity-Bootstrap]]]
             [[[[outHumidity]]]]
