--- a/skins/Bootstrap/skin.conf
+++ b/skins/Bootstrap/skin.conf
@@ -580,8 +580,8 @@
             plot_type = bar
             [[[[rain]]]]
                 aggregate_type = sum
-                aggregate_interval = 3600
-                label = Niederschlag (Summe 1h)
+                aggregate_interval = 1800
+                label = Niederschlag (Summe 30min.)
 
         [[[dayhumidity-Bootstrap]]]
             [[[[outHumidity]]]]
