--- a/skins/Bootstrap/skin.conf
+++ b/skins/Bootstrap/skin.conf
@@ -914,23 +914,23 @@
     [[outTemp]] # choose freely
         #animation = False # default true
         [[[outTemp]]] #choose weewx field name
-            payload_key = outTemp_F
+            payload_key = outTemp_C
             showMaxMarkPoint = true
             showMinMarkPoint = true
             showAvgMarkLine = true
-            lineColor = '#428bca'
+            lineColor = '#b44242'
             decimals = 1
         [[[dewpoint]]]
             payload_key = disabled_dewpoint_C
             showMaxMarkPoint = false
             showMinMarkPoint = false
             showAvgMarkLine = false
-            lineColor = '#b44242'
+            lineColor = '#428bca'
             decimals = 1
 
     [[barometer]]
         [[[barometer]]]
-            payload_key = barometer_inHg
+            payload_key = barometer_mbar
             showMaxMarkPoint = true
             showMinMarkPoint = true
             showAvgMarkLine = false
@@ -940,7 +940,7 @@
     [[rain]]
         aggregate_interval_minutes = 30
         [[[rain]]]
-            payload_key = rain_in
+            payload_key = rain_mm
             showMaxMarkPoint = false
             showMinMarkPoint = false
             showAvgMarkLine = false
@@ -958,14 +958,14 @@
 
     [[wind]]
         [[[windSpeed]]]
-            payload_key = windSpeed_mph
+            payload_key = windSpeed_mps
             showMaxMarkPoint = false
             showMinMarkPoint = false
             showAvgMarkLine = false
             lineColor = '#428bca'
             decimals = 0
         [[[windGust]]]
-            payload_key = windGust_mph
+            payload_key = windGust_mps
             showMaxMarkPoint = true
             showMinMarkPoint = false
             showAvgMarkLine = false
